# WordsSort

./: CMakeLists.txt  gtests.cpp  main.cpp
formatter/: formatter.cpp  formatter.h
